# cpp_deployment_minicourse

part1_python/py_other/1_ctypes/: add.cpp  build.sh  fun1.py  fun2.py
part1_python/py_other/2_cython_jupyter/: .gitignore  fun1.ipynb
part1_python/py_other/3_cython/: README.md  demo.py  integrate.pyx  setup.py
part1_python/py_pybind/: README.md
part1_python/py_pybind/1/: example.cpp  run_example.py
part1_python/py_pybind/2/: example.cpp  run_example.py
part1_python/py_pybind/3/: example.cpp  run_example.py
part1_python/py_pybind/4_cmake/: CMakeLists.txt  README.md  example.cpp
part1_python/py_pybind/5/: build.sh  example.cpp  run_example.py
part1_python/py_pybind/6/: build.sh  example.cpp  run_example.py
part2_neuralnets_cpp/: .gitignore  BUILD_ORT.md  BUILD_TFLITE.md
part2_neuralnets_cpp/opencv1/: CMakeLists.txt  README.md  create_onnx.py  opencv1.cpp
part2_neuralnets_cpp/ort1/: CMakeLists.txt  README.md  create_onnx.py  ort1.cpp
part2_neuralnets_cpp/ort2/: CMakeLists.txt  README.md  ort2.cpp
part2_neuralnets_cpp/tflite1/: CMakeLists.txt  README.md  create_tflite.py  infer_tflite_python.py  tflite1.cpp
part2_neuralnets_cpp/torch1/: CMakeLists.txt  README.md  create_pt_model.py  torch1.cpp
part3_jni_android/jni_android/FunCVAndroid/: README.md
part3_jni_android/jni_android/FunCVAndroid/app/: build.gradle
part3_jni_android/jni_android/FunCVAndroid/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
part3_jni_android/jni_android/FunCVAndroid/app/src/main/java/com/example/funcvandroid/: MainActivity.kt
part3_jni_android/jni_android/FunCVAndroid_static/: README.md  settings.gradle
part3_jni_android/jni_android/FunCVAndroid_static/app/: build.gradle
part3_jni_android/jni_android/FunCVAndroid_static/app/src/androidTest/java/com/example/funcvandroid/: ExampleInstrumentedTest.kt
part3_jni_android/jni_android/FunCVAndroid_static/app/src/main/: AndroidManifest.xml
part3_jni_android/jni_android/FunCVAndroid_static/app/src/main/cpp/: CMakeLists.txt
part3_jni_android/jni_android/FunCVAndroid_static/app/src/main/res/layout/: activity_main.xml
part3_jni_android/jni_android/FunCVAndroid_static/app/src/main/res/values/: strings.xml  themes.xml
part3_jni_android/jni_android/FunCVAndroid_static/app/src/main/res/values-night/: themes.xml
part3_jni_android/jni_android/FunCVAndroid_static/app/src/test/java/com/example/funcvandroid/: ExampleUnitTest.kt
part3_jni_android/jni_android/FunCVAndroid_static/gradle/wrapper/: gradle-wrapper.properties
part3_jni_android/jni_android/JNIAndroid/: settings.gradle
part3_jni_android/jni_android/JNIAndroid/app1/: build.gradle
part3_jni_android/jni_android/JNIAndroid/app1/src/androidTest/java/com/example/jniandroid/: ExampleInstrumentedTest.kt
part3_jni_android/jni_android/JNIAndroid/app1/src/main/: AndroidManifest.xml
part3_jni_android/jni_android/JNIAndroid/app1/src/main/cpp/: CMakeLists.txt  native-lib.cpp
part3_jni_android/jni_android/JNIAndroid/app1/src/main/java/com/example/jniandroid/: MainActivity.kt
part3_jni_android/jni_android/JNIAndroid/app1/src/main/res/layout/: activity_main.xml
part3_jni_android/jni_android/JNIAndroid/app1/src/main/res/values/: strings.xml  themes.xml
part3_jni_android/jni_android/JNIAndroid/app1/src/main/res/values-night/: themes.xml
part3_jni_android/jni_android/JNIAndroid/app2/: build.gradle
part3_jni_android/jni_android/JNIAndroid/app2/src/main/cpp/: CMakeLists.txt  app2.cpp
part3_jni_android/jni_android/JNIAndroid/app2/src/main/res/values/: strings.xml
part3_jni_android/jni_android/JNIAndroid/app3/: build.gradle
part3_jni_android/jni_android/JNIAndroid/app3/src/main/: AndroidManifest.xml
part3_jni_android/jni_android/JNIAndroid/app3/src/main/cpp/: CMakeLists.txt  app3.cpp
part3_jni_android/jni_android/JNIAndroid/app3/src/main/res/values/: strings.xml
part3_jni_android/jni_android/JNIAndroid/gradle/wrapper/: gradle-wrapper.properties
part3_jni_android/jni_desktop/: .gitignore  README.md
part3_jni_android/jni_desktop/java1/: README.md  com_example_Hello.cpp  com_example_Hello.h
part3_jni_android/jni_desktop/java1/com/example/: Hello.java
part3_jni_android/jni_desktop/java2/: README.md  com_example_Hello.cpp  com_example_Hello.h
part3_jni_android/jni_desktop/java2/com/example/: Hello.java
part3_jni_android/jni_desktop/java3/: BoxImpl.h  README.md  build.sh  com_example_Box.cpp
part3_jni_android/jni_desktop/java3/com/example/: Hello.java
part3_jni_android/jni_desktop/java3_gradle_cmake/: .gitignore  README.md  settings.gradle
part3_jni_android/jni_desktop/java3_gradle_cmake/app/: build.gradle
part3_jni_android/jni_desktop/java3_gradle_cmake/app/src/main/java/com/example/: Box.java
part3_jni_android/jni_desktop/java3_gradle_cmake/src_cpp/: CMakeLists.txt  com_example_Box.cpp
part3_jni_android/jni_desktop/java4/: README.md  com_example_Hello.cpp  com_example_Hello.h
part3_jni_android/jni_desktop/java4/com/example/: Hello.java
part3_jni_android/jni_desktop/kotlin1/: build.sh  hello.kt
part3_jni_android/jni_desktop/kotlin2/: README.md  com_example_Hello.cpp  hello.kt
part3_jni_android/jni_desktop/kotlin3/: com_example_Box.h  hello.kt
part3_jni_android/jni_desktop/kotlin4/: README.md  hello.kt
part4_emscipten_wasm/: .gitignore  README.md
part4_emscipten_wasm/fun1/: .gitignore  compile.sh  index.html  myadd.cpp
part4_emscipten_wasm/fun2/: CMakeLists.txt  file1.txt  file2.txt  idex.html  pfile.cpp
part4_emscipten_wasm/fun3_mod/: CMakeLists.txt  index.html  mymul.cpp
part4_emscipten_wasm/fun4_embind/: CMakeLists.txt  compile.sh  index.html  myadd.cpp
part4_emscipten_wasm/fun5_embind_class/: CMakeLists.txt  hero.cpp  index.html
part4_emscipten_wasm/fun6_mem/: CMakeLists.txt  index.html  mem.cpp
part4_emscipten_wasm/fun7_except/: CMakeLists.txt  excep.cpp  index.html
part4_emscipten_wasm/fun8_threads/: CMakeLists.txt  README.md  index.html  mycpp.cpp  server_node.js
part4_emscipten_wasm/fun9_opencv/: CMakeLists.txt  README.md  config_emsdk_cv.sh  index.html  mycpp.cpp
(+3 files in other folders)
